@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.63 2007-09-08 02:46:42 cmatsuoka Exp $
+$Id: ChangeLog,v 1.64 2007-09-11 00:15:51 cmatsuoka Exp $
 
 Stable versions
 ---------------
@@ -27,6 +27,8 @@ Stable versions
 	- added Zoo depacker
 	- added MED3 module loader
 	- added MED4 module loader
+	- added IIgs ASIF sample converter
+	- added IIgs SoundSmith/MegaTracker loader
 	- enabled WAV writer
 	- enabled IMF filter effects
 	- removed broken shared lib generation
